--- a/index.html
+++ b/index.html
@@ -839,38 +839,65 @@
       100% { background-position: 0% 50%; }
     }
 
-    /* Add these responsive styles in the style section */
+    /* Enhanced Mobile and Device Responsiveness */
     @media screen and (max-width: 768px) {
       /* Navigation */
       .navbar {
-        padding: 0.5rem;
+        padding: 0.75rem;
+        position: fixed;
+        width: 100%;
+        z-index: 1000;
       }
 
       .nav-links {
-        flex-direction: column;
-        gap: 1rem;
-        padding: 1rem 0;
+        padding: 4rem 1rem 2rem;
+      }
+
+      .nav-links a {
+        font-size: 1.2rem;
+        padding: 0.8rem;
+        display: block;
+        width: 100%;
+        text-align: center;
       }
 
       /* Hero Section */
       .hero {
-        padding: 4rem 1rem 2rem 1rem;
+        padding: 8rem 1rem 4rem;
         min-height: auto;
+      }
+
+      .hero-content {
+        width: 100%;
+        padding: 0 1rem;
       }
 
       .profile-pic {
         width: 150px;
         height: 150px;
+        margin-bottom: 1.5rem;
       }
 
+      .hero h1 {
+        font-size: 1.8rem;
+        margin-bottom: 0.5rem;
+      }
+
+      .hero p {
+        font-size: 1rem;
+      }
+
+      /* Social Links */
       .social-links {
+        flex-wrap: wrap;
+        justify-content: center;
         gap: 1rem;
+        margin-top: 1.5rem;
       }
 
       .social-link {
-        width: 35px;
-        height: 35px;
-        font-size: 1.1rem;
+        width: 40px;
+        height: 40px;
       }
 
       /* Sections */
@@ -878,9 +905,24 @@
         padding: 3rem 1rem;
       }
 
+      .section-content {
+        padding: 0;
+      }
+
       .section-title {
-        font-size: 2rem;
+        font-size: 1.8rem;
         margin-bottom: 2rem;
+      }
+
+      /* About Section */
+      .about-content {
+        padding: 1.5rem;
+        margin: 0 1rem;
+      }
+
+      .about-quote {
+        padding: 1rem;
+        margin: 1.5rem 0;
       }
 
       /* Skills Grid */
@@ -905,6 +947,10 @@
         height: 300px;
       }
 
+      .project-overlay {
+        padding: 1.5rem;
+      }
+
       .project-title {
         font-size: 1.3rem;
       }
@@ -914,54 +960,103 @@
       }
 
       /* Research Section */
-      .research-grid {
-        grid-template-columns: 1fr;
-      }
-
       .research-section {
         padding: 1.5rem;
+        margin: 0 1rem;
       }
 
-      .research-title {
-        font-size: 1.3rem;
+      .research-grid {
+        grid-template-columns: 1fr;
+        gap: 1.5rem;
       }
 
       /* Contact Form */
       .contact-form {
         padding: 1.5rem;
+        margin: 0 1rem;
       }
 
       .form-group input,
       .form-group textarea {
-        padding: 0.5rem;
+        padding: 0.75rem;
         font-size: 1rem;
-      }
-
-      /* Certifications */
-      .cert-container {
-        padding: 0 1rem;
-      }
-
-      .cert-image {
-        max-width: 100%;
-      }
-
-      /* Modal */
-      .modal-content {
-        width: 90%;
-        max-width: none;
       }
     }
 
-    /* Add tablet specific styles */
+    /* Tablet Responsiveness */
     @media screen and (min-width: 769px) and (max-width: 1024px) {
+      .hero {
+        padding: 6rem 2rem 4rem;
+      }
+
+      .section-content {
+        padding: 0 2rem;
+      }
+
       .skills-grid,
       .projects-grid {
         grid-template-columns: repeat(2, 1fr);
+        gap: 2rem;
       }
 
+      .project-card {
+        height: 350px;
+      }
+
+      .about-content,
+      .research-section,
+      .contact-form {
+        margin: 0 2rem;
+      }
+    }
+
+    /* Large Screens */
+    @media screen and (min-width: 1025px) {
+      .section-content {
+        max-width: 1200px;
+        margin: 0 auto;
+      }
+
+      .skills-grid,
+      .projects-grid {
+        grid-template-columns: repeat(3, 1fr);
+      }
+
+      .project-card {
+        height: 400px;
+      }
+    }
+
+    /* Fix for notched phones */
+    @supports (padding: max(0px)) {
+      .navbar {
+        padding-left: max(1rem, env(safe-area-inset-left));
+        padding-right: max(1rem, env(safe-area-inset-right));
+      }
+
+      .hero,
       section {
-        padding: 4rem 2rem;
+        padding-left: max(2rem, env(safe-area-inset-left));
+        padding-right: max(2rem, env(safe-area-inset-right));
+      }
+    }
+
+    /* Fix for landscape mode */
+    @media screen and (max-height: 500px) and (orientation: landscape) {
+      .hero {
+        min-height: auto;
+        padding: 6rem 2rem 3rem;
+      }
+
+      .profile-pic {
+        width: 100px;
+        height: 100px;
+      }
+
+      .nav-links.active {
+        height: auto;
+        max-height: 100vh;
+        overflow-y: auto;
       }
     }
   </style>
@@ -1473,4 +1568,5 @@
     });
   </script>
 
+</body></html>
 </body></html>
