--- a/index.html
+++ b/index.html
@@ -839,7 +839,7 @@
       100% { background-position: 0% 50%; }
     }
 
-    /* Enhanced Mobile and Device Responsiveness */
+    /* Research Section Enhanced Mobile Styles */
     @media screen and (max-width: 768px) {
       /* Navigation */
       .navbar {
@@ -959,15 +959,64 @@
         font-size: 0.9rem;
       }
 
-      /* Research Section */
+      /* Enhanced Research Section Mobile Styles */
       .research-section {
         padding: 1.5rem;
-        margin: 0 1rem;
+        margin: 0;
+        width: 100%;
+        box-sizing: border-box;
       }
 
       .research-grid {
         grid-template-columns: 1fr;
-        gap: 1.5rem;
+        gap: 2rem;
+        width: 100%;
+      }
+
+      .research-content {
+        padding: 0;
+        text-align: left;
+      }
+
+      .research-title {
+        font-size: 1.4rem;
+        margin-bottom: 1rem;
+        line-height: 1.4;
+      }
+
+      .research-details {
+        font-size: 0.95rem;
+        margin-bottom: 1.5rem;
+      }
+
+      .research-details p {
+        margin-bottom: 1rem;
+      }
+
+      .research-links {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        width: 100%;
+      }
+
+      .research-btn {
+        width: 100%;
+        justify-content: center;
+        padding: 0.8rem;
+        font-size: 1rem;
+      }
+
+      .certificate-container {
+        width: 100%;
+        margin-top: 1.5rem;
+      }
+
+      .certificate-container img {
+        width: 100%;
+        height: auto;
+        border-radius: 8px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
       }
 
       /* Contact Form */
@@ -1007,6 +1056,14 @@
       .research-section,
       .contact-form {
         margin: 0 2rem;
+      }
+
+      .research-section {
+        padding: 2rem;
+      }
+
+      .research-grid {
+        gap: 2.5rem;
       }
     }
 
@@ -1568,5 +1625,4 @@
     });
   </script>
 
-</body></html>
 </body></html>
